Changes for 3.2.6rc1

New features:

Bug fixes:
........S. [ZBX-12100] fixed new line handling in SSH agent with numeric type of information (vso)
..F....... [ZBX-9958] fixed wrongly displayed list view after mass update failure (miks)

--------------------------------------------------------------------------------
Changes for 3.2.5

3.2.5rc1 was released as 3.2.5 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.5rc1

Bug fixes:
........S. [ZBX-12075] fixed security vulnerability with execution of the remote commands on server; thanks to Lilith Wyatt, Cisco Systems (gleb)
........S. [ZBX-12076] fixed security vulnerability with execution of the remote commands on proxy; thanks to Lilith Wyatt, Cisco Systems (gleb)
..F....... [ZBX-11024] fixed popup window size in actions configuration form (miks)
..F....... [ZBX-10997] fixed usage of wrong API in screen constructor (miks)
..F....... [ZBX-11477] fixed lost user name in profile title (miks)
........S. [ZBX-11889] fixed lastaccess update for passive proxy (viktors)
A......... [ZBX-10373] fixed check for screen items overlap (gcalenko, Sasha)
..F....... [ZBX-11960] fixed interface dragging in host edit page in Chome browser (vmurzins)
..F....... [ZBX-11925] fixed parsing of nested host groups (gcalenko, Sasha)
..F....... [ZBX-11345] fixed webscenario update error when step does not exist (gcalenko)
..F....... [ZBX-11975] fixed undefined index error in web scenario step creation (vmurzins)
.......PS. [ZBX-11980] fixed incorrect type handling in SSH checks (abs)
...G...... [ZBX-11959] fixed memory leak in the agent on OpenBSD, FreeBSD and NetBSD (abs)
..F....... [ZBX-11984] fixed host hyperlink style on event details page (gcalenko)
.......PS. [ZBX-11807] fixed poller stalling due to incorrect handling of unixODBC library (viktors)
..F....... [ZBX-11877] fixed undefined index error in screens for triggers without events data (gcalenko)